# compr

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  main.py  move_to_bin  move_to_bin.sh  move_to_path.bat  no_srep.compr  pyproject.toml  with_srep.compr
compr/: __init__.py  _archive.py  _classify.py  _cli.py  _entropy.py  _packer.py  _unpacker.py
src/: classify.rs  compress.rs  entropy.rs  filter.rs  format.rs  image.rs  main.rs  packer.rs  sort.rs  srep.rs  unpacker.rs
tests/: integration.rs  test_compression.py
