[package]
name = "compr"
version = "0.1.0"
edition = "2021"
description = "Streaming solid archive compression for images and videos"

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
crc32fast = "1"
anyhow = "1"
thiserror = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp", "tiff"] }
zstd = { version = "0.13", features = ["zstdmt"] }

[dev-dependencies]
tempfile = "3"
